* New interface to handle the Log subelements from the CruiseControl config. Implementers have the opportunity to manipulate the CruiseControl build log just before it gets written to disk.

build.xml (jsp)
----------------------
* will build war w/out jars in WEB-INF/lib if property jdk1.4 is defined.
* removed files from war that shouldn't be included. Patch by Matt Albrecht

CruiseControlTagSupport
----------------------
* minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha

Email Publishers (LinkEmailPublisher and HTMLEmailPublisher)
----------------------
* failure subelements now contain an optional attribute "reportWhenFixed" to specify if the email address should be sent mail when the build is fixed.

JMX Interface
----------------------
* Added a halt operation on the CruiseControl process JMX interface. Patch from Matt Albrecht
* Renamed start operation to resume.
* Renamed stop operation to pause.

logile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

Modification Set
----------------------
* Changed to instruct CC to do a build if a modification occurs in the future. Patch by Geoff Krapf

Project
----------------------
* add descriptive toString so JMX view of CruiseControlManager shows status for each project - Patch by Matt Albrecht
* fixed to allow changing build interval from JMX interface. Project was reloading the original value from Schedule, overwriting any change a user had made in the JMX interface.

SametimeAnnouncementPublisher
----------------------
* New publisher implementation to publish build results to IBM/Lotus Sametime server. Contributed by Richard Lewis-Shell.

SVN
----------------------
* fix to use execute on Commandline object instead of just using getCommandline() - Patch by Etienne Studer

TabSheetTag
----------------------
* changed to not use images for tabs. should make it easier to add new tabs.
